--- a/index.html
+++ b/index.html
@@ -1,48 +1,114 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
+  <title>Bootstrap Visualization Dashboard</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="styles.css">
 </head>
-
+	
+		
 <body>
+	
+<div class="navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light col-xl-12">
+    <a class="navbar-brand" href="index.html">Lattitude </a>
+    
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>	
+	
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Plots
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="maxtemperature.html">Max Temperature</a>
+            <a class="dropdown-item" href="humidity.html">Humidity</a>
+			  <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+			  <a class="dropdown-item" href="windspeed.html">Wind Speed</a>
 
-  <h1>Rodney Kirkendoll</h1>
+          </div>
+			
+        </li>		  
+		  <li class="nav-item active">
+          <a class="nav-link" href="comparison.html">Comparison </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="data.html">Data</a>
+        </li>
+         </ul>
+     
+    </div>
+  </nav>
+</div>
+ 
+  <br>
+	  <br>
+<div class="container">
+    <div class="row">		
+      <div class="col-lg-7 col-md-12 ">
+          <div class="containers">
+			 <h3 class="header">Summary: Latitude vs. X</h3> <hr>					  
+		<img src="Resources/assets/images/Fig1.png" class="purpose rounded float-left" >
+			  <p>The Purpose of this project was to analyze how weather changes as you get closer to the equator.
+			To accomplish this analysis, we first pull data from  the OpenWeatherMap API to assemble a dataset on over 500
+			cities.</p>
+            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. lattitude.
+			Factors we looked at temperature, cloudiness, wind speed, and humidity. This site provides the source data
+			and visualizations created as part of the analysis, as well as explanations and descriptionsof any trend
+			and correlations witnessed.</p>
+          </div>
+        </div>		
+	 <div class="col-lg-5 col-md-12">
+		 <!--RIGHT BOX-->
+            <div class="containers">             
+			<h5 class="header">Visualizations</h5>	            
+			<hr>
+             <div class="container">
+			    <div class="row" style="padding-bottom: 30px;">			  
+				  <div class="col-6">
+				  <a href="maxtemperature.html">
+				  <img src="Resources/assets/images/Fig1.png" class="panel" >
+				  </a>
+				  </div>				  
+				  <div class="col-6">
+				  <a href="humidity.html">
+				  <img src="Resources/assets/images/Fig2.png"  class="panel" >
+				  </a>
+				  </div>
+			    </div>			  
+				<div class= "row" style= "padding-bottom: 30px;">			  
+				  <div class="col-6">
+				  <a href="cloudiness.html">
+				  <img class="panel" src="Resources/assets/images/Fig3.png">
+				  </a>
+				  </div>				  
+				  <div class="col-6">
+				  <a href="windspeed.html">
+				  <img class="panel" src="Resources/assets/images/Fig4.png">
+				  </a>		  
+			   </div></div>
+            </div>
+  </div>
+</div>	
+</div>
+	</div>
+	
+	
+  <footer>
+    <div class="footer">Copyright &copy; Coding Bootcamp 2019</div>
+  </footer>
 
-  <img src="https://placehold.it/200x200" alt="Your Name">
-
-  <p>Write a short paragraph about yourself or some placeholder text.</p>
-  <p>A second short paragraph about yourself or some placeholder text.</p>
-
-  <ul>
-    <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-    <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
-  </ul>
-
-  <table>
-    <tr>
-      <th>Books</th>
-      <th>Movies</th>
-      <th>Games</th>
-    </tr>
-    <tr>
-      <td>The Hobbit</td>
-      <td>Hot Fuzz</td>
-      <td>Dark Souls</td>
-    </tr>
-    <tr>
-      <td>The Name of the Wind</td>
-      <td>The Avengers</td>
-      <td>The Last of Us</td>
-    </tr>
-    <tr>
-      <td>The Girl With All the Gifts</td>
-      <td>The Matrix</td>
-      <td>Dragon Age: Origins</td>
-    </tr>
-  </table>
-
+	
 </body>
 
 </html>
